--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "smartsearch-proxy",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2",
-    "nanoid": "^5.0.7"
+    "node-fetch": "^3.3.2"
   }
 }
+
