--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "smartsearch-proxy",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "type": "module",
   "main": "server.js",
+  "engines": { "node": ">=20.0.0" },
   "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2"
+    "morgan": "^1.10.0"
   }
 }
-
