--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "smartsearch-proxy",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "engines": { "node": ">=18.17.0" },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2"
+    "morgan": "^1.10.0"
   }
 }
