--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "smartsearch-proxy",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "type": "module",
   "main": "server.js",
-  "engines": { "node": ">=18.17.0" },
+  "engines": { "node": ">=16.18.0" },
   "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "undici": "^7.3.0"
   }
 }
