--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "smartsearch-proxy",
-  "version": "1.1.4",
+  "version": "1.0.0",
   "type": "module",
   "main": "server.js",
-  "engines": { "node": ">=16.18.0" },
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "undici": "^7.3.0"
+    "axios": "^1.7.0",
+    "express": "^4.19.2"
   }
 }
